--- a/src/app/chat/miniChat/miniChat.component.html
+++ b/src/app/chat/miniChat/miniChat.component.html
@@ -4,7 +4,7 @@
          userId: userId$ | async,
          miniMessages: miniMessages$ | async } as data">
     <div class="block-minichat">
-        <div class="blocktitle text-center">
+        <div class="title">
             <b>Мини-чат</b>
         </div>
         <chat-window
