--- a/src/app/lazy-modules/navbar-menu/components/navbar-menu.component.html
+++ b/src/app/lazy-modules/navbar-menu/components/navbar-menu.component.html
@@ -36,8 +36,8 @@
 <div class="menu-block">
     <a role="button" [routerLink]="['/users']">Пользователи</a>
 </div>
-<div class="menu-block">
-    <a role="button" [routerLink]="['/rules']"><b class="color-red beauty-font">Правила</b></a>
+<div class="menu-block rules">
+    <a role="button" [routerLink]="['/rules']" class="beauty-font">Правила</a>
 </div>
 <div class="menu-block chat">
     <a role="button" [routerLink]="['/chat']"><b class="beauty-font">Чаты</b></a>
