--- a/src/app/materials/core/material-home/material-home.component.scss
+++ b/src/app/materials/core/material-home/material-home.component.scss
@@ -1,6 +1,6 @@
-﻿hen .material-container {    
+﻿.material-container {    
     max-width:250px;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
     width: 100%;
     content-visibility: auto;
     contain-intrinsic-size: 360px; 
