--- a/src/app/match-events/components/match-event-panel-component/match-event-panel.component.scss
+++ b/src/app/match-events/components/match-event-panel-component/match-event-panel.component.scss
@@ -1,7 +1,7 @@
 ﻿
-    .color-green {
-        color: green;
-    }
+.color-green {
+    color: green;
+}
 
 .events {
     display: flex;
@@ -18,4 +18,13 @@
 
 .width20px {
     width: 20px;
+}
+
+.add-buttons {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row;
+    flex-wrap: wrap;
+    margin-top: 12px;
+    width: 100%;
 }
