--- a/src/app/materials/core/material-home/material-home.component.html
+++ b/src/app/materials/core/material-home/material-home.component.html
@@ -9,6 +9,6 @@
     </div>
 </div>
 
-<div class="text-center">
+<div class="text-center" *ngIf="latest">
     <a [routerLink]="['/materials']"> Больше новостей > </a>
 </div>
