--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 ﻿footer {
     border-top: 1px solid maroon;
     order: 4;
+    min-height: 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -8,8 +9,6 @@
     flex-wrap: wrap;
     margin-top: 5px;
     width: 100%;
-    position:fixed;
-    bottom:0;
 }
 
 .breadcrumb-row {
