--- a/src/app/contracts/pages/current-contracts-list-page/current-contracts-list-page.component.html
+++ b/src/app/contracts/pages/current-contracts-list-page/current-contracts-list-page.component.html
@@ -29,7 +29,10 @@
 
             <ng-container matColumnDef="salary">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Зарплата (фунтов в неделю)</th>
-                <td mat-cell *matCellDef="let contract" [textContent]="contract.salary | currency:'GBP':'symbol':'1.0-0'"></td>
+                <td mat-cell *matCellDef="let contract">
+                    <span *ngIf="contract.salary > 0;else unknown" [textContent]="contract.salary | currency:'GBP':'symbol':'1.0-0'"></span>
+                    <ng-template #unknown>Неизвестна</ng-template>
+                </td>
             </ng-container>
 
             <ng-container matColumnDef="startDate">
