--- a/src/app/comments/shared/comment-section/comment-section.component.html
+++ b/src/app/comments/shared/comment-section/comment-section.component.html
@@ -17,7 +17,7 @@
     <form *ngIf="canCommentary && data.isLogined" class="form-horizontal" role="form" [formGroup]="commentAddForm"
         (ngSubmit)="onSubmit()">
         <div class="full-width">
-            <bbeditor formControlName="message"></bbeditor>
+            <bbeditor formControlName="message" [height]="150"></bbeditor>
             <div class="comment-action-buttons" style="margin-bottom: 0">
                 <button mat-raised-button color="warn" type="submit"
                     [disabled]="!commentAddForm.valid">Добавить</button>
