--- a/src/app/match-persons/components/match-person-edit-panel/match-person-edit-panel.component.html
+++ b/src/app/match-persons/components/match-person-edit-panel/match-person-edit-panel.component.html
@@ -2,8 +2,12 @@
     <hr class="full-width" />
     <div class="text-center">Добавление человека к матчу</div>
     <form class="full-width" role="form" [formGroup]="editMatchPersonForm" (ngSubmit)="onSubmit()">
-        <select-person-form-field [formControl]="getControl()" [selected]="selected"
-            [type]="this.editMatchPersonForm.get('useType').value ? editOptions.personTypeId : null" [focus]="true">
+        <select-person-form-field [formControl]="getControl()"
+            [selected]="selected"
+            [matchId]="matchId"
+            [type]="this.editMatchPersonForm.get('useType').value ? editOptions.personTypeId : null"
+            [focus]="true"
+            (selectionChange)="onSubmit()">
         </select-person-form-field>
         <mat-form-field class="full-width">
             <mat-select placeholder="Тип" formControlName="personType">
