--- a/src/app/lazy-modules/admin-top-panel/components/admin-top-panel.component.html
+++ b/src/app/lazy-modules/admin-top-panel/components/admin-top-panel.component.html
@@ -2,8 +2,14 @@
     isInformer: isInformer$ | async
  } as data">
     <div class="panel">
-        <a *ngIf="data.isNewsmaker" [routerLink]="['/news', 0, 'edit']">+ новость</a>
-        <a [routerLink]="['/blogs', 0, 'edit']">+ блог</a>
+        <a *ngIf="data.isNewsmaker" [routerLink]="['/news', 0, 'edit']">+Новость</a>
+        <a [routerLink]="['/blogs', 0, 'edit']">+Блог</a>
         <a [routerLink]="['/admin']">Админка</a>
+        <a [routerLink]="['/persons']">Люди</a>
+        <a [routerLink]="['/persons/0/edit']">Л+</a>
+        <a [routerLink]="['/stadiums']">Стадионы</a>
+        <a [routerLink]="['/stadiums/0/edit']">С+</a>
+        <a [routerLink]="['/matches']">Матчи</a>
+        <a [routerLink]="['/matches/0/edit']">М+</a>
     </div>
 </ng-container>
