--- a/src/app/lazy-modules/admin-top-panel/components/admin-top-panel.component.html
+++ b/src/app/lazy-modules/admin-top-panel/components/admin-top-panel.component.html
@@ -11,5 +11,6 @@
         <a [routerLink]="['/stadiums/0/edit']">С+</a>
         <a [routerLink]="['/matches']">Матчи</a>
         <a [routerLink]="['/matches/0/edit']">М+</a>
+        <a [routerLink]="['/injuries/0/edit']">Т+</a>
     </div>
 </ng-container>
