--- a/src/app/match-events/components/match-event-panel-component/match-event-panel.component.scss
+++ b/src/app/match-events/components/match-event-panel-component/match-event-panel.component.scss
@@ -19,3 +19,10 @@
 .width20px {
     width: 20px;
 }
+
+.buttons-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 8px;
+    width: 100%;
+}
